# shad_c_hw2

./: CMakeLists.txt  Makefile  argtools.h  asm.c  check.cpp  commands.txt  mingw_stdio_fix.h  strtools.c  strtools.h  test.cpp  vm.c
asm/: error_check_tools.h  exit_codes.h  labels.c  labels.h  readtoken.c  readtoken.h  regtools.h  token_tools.c  token_tools.h  tokenizer.h
utils/: error_check_tools.h  iotools.h  strtools.c  strtools.h  vector.h  vector_size_t.h
vm/: exit_codes.h  handlers.c  handlers.h  handlersarray.c  handlersarray.h  inst_return_codes.h  vmstruct.c  vmstruct.h
